service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stocks-service
spec:
  type: NodePort
  selector:
    app: stocks
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
