ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stocks-ingress
spec:
  defaultBackend:
    service:
      name: stocks-service
      port:
        number: 8080
